<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="24dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="0dp"
    tools:context=".DisasterSelectionActivity">

    <!-- 제목 -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/disaster_selection_title"
        android:textColor="@color/blue_90"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 설명 -->
    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/disaster_selection_subtitle"
        android:textColor="@color/grey_60"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <!-- 전체 선택 체크박스 -->
    <CheckBox
        android:id="@+id/cb_all"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/checkbox_selector"
        android:gravity="center"
        android:text="@string/checkbox_all"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

    <!-- 체크박스 그룹 -->
    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_disaster_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        app:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_all">

        <CheckBox
            android:id="@+id/cb_typhoon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/checkbox_selector"
            android:gravity="center"
            android:text="@string/typhoon"
            app:layout_columnWeight="1"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

        <CheckBox
            android:id="@+id/cb_weather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/checkbox_selector"
            android:gravity="center"
            android:text="@string/weather"
            app:layout_columnWeight="1"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

        <CheckBox
            android:id="@+id/cb_news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/checkbox_selector"
            android:gravity="center"
            android:text="@string/news"
            app:layout_columnWeight="1"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

        <CheckBox
            android:id="@+id/cb_earthquake"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/checkbox_selector"
            android:gravity="center"
            android:text="@string/earthquake"
            app:layout_columnWeight="1"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

        <CheckBox
            android:id="@+id/cb_epidemic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/checkbox_selector"
            android:gravity="center"
            android:text="@string/epidemic"
            app:layout_columnWeight="1"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

        <CheckBox
            android:id="@+id/cb_special_report"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/checkbox_selector"
            android:gravity="center"
            android:text="@string/special_report"
            app:layout_columnWeight="1"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

        <CheckBox
            android:id="@+id/cb_fire"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/checkbox_selector"
            android:gravity="center"
            android:text="@string/fire"
            app:layout_columnWeight="1"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

        <CheckBox
            android:id="@+id/cb_fine_dust"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/checkbox_selector"
            android:gravity="center"
            android:text="@string/fine_dust"
            app:layout_columnWeight="1"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

        <CheckBox
            android:id="@+id/cb_report"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/checkbox_selector"
            android:gravity="center"
            android:text="@string/report"
            app:layout_columnWeight="1"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />
    </androidx.gridlayout.widget.GridLayout>

    <!-- 다음 버튼 (.-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_complete"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/next"
        android:backgroundTint="@color/blue_60"
        android:textColor="@color/white"
        app:cornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@id/grid_disaster_types"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- 건너뛰기 버튼 -->
    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_skip"
        android:textColor="@color/grey_70"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_complete" />

</androidx.constraintlayout.widget.ConstraintLayout>